package utils;

public class Utils {
    public static boolean chance(double chance) {
        return Math.random() <= chance;
    }
}
